--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       new Label('Sarkovia', 943, -265, '#f90120'),
       new Label('Imperium', 2656, 98, '#de8644'),
       new Label('Checkerboard Union', 1421, 1124, '#b9bbcc'),
-      new Label('The SWZT', -46, 1487, '#559b16'),
+      new Label('The SWTZ', -46, 1487, '#559b16'),
       new Label('The Holy Hydra Empire', -1219, 445, '#f38912'),
       new Label('Helioria', -1427, -960, '#bbdc65'),
       new Label('Polestar', 1653, -273, '#6767ea'),
