--- a/index.html
+++ b/index.html
@@ -70,7 +70,15 @@
       apply(ctx) {
         ctx.translate(ctx.canvas.width/2, ctx.canvas.height/2)
         ctx.scale(this.#scale, this.#scale);
-        ctx.translate(-this.#x, -this.#y);
+
+        // quantize position to screen pixel to reduce flimmer
+        const quantization = this.screenToWorldDistance(1);
+        const quantizedPos = {
+          x: Math.round(this.#x / quantization) * quantization,
+          y: Math.round(this.#y / quantization) * quantization
+        };
+
+        ctx.translate(-quantizedPos.x, -quantizedPos.y);
       }
 
       addChangeCallback(changeCallback) {
